# mcp-dreamwalker

./: .env.example  .gitignore  .mcp.json  ACTIVATE_IN_CLAUDE_CODE.md  CHANGELOG.md  CLAUDE_CODE_TROUBLESHOOTING.md  CREATION_SUMMARY.md  DREAMWALKER_TOOL_INVENTORY.md  FIX_CLAUDE_MCP.sh  GITHUB_SETUP_NEXT_STEPS.md  MANIFEST.in  MCP_AUTOCOMPLETE_FIX.md  MCP_AUTOCOMPLETE_INVESTIGATION_RESULTS.md  MCP_NAMING_FIX_SUMMARY.md  MCP_PLUGIN_PLAN.md  MCP_SETUP_GUIDE.md  MCP_STATUS.md  NAMING_CONVENTION_FINAL.md  NAMING_UPDATE_STATUS.md  README.md  STRUCTURE_REPORT.md  USER_GUIDE.md  VERIFICATION_CHECKLIST.md  config.py  diagnose_mcp.sh  fix_all_stdio_servers.py  fix_protocol_version.py  fix_stdio_servers_v2.py  load_env_to_shell.sh  pyproject.toml  pytest.ini  requirements-all.txt  requirements.txt  setup.py  setup_claude_code.sh  test_mcp_autocomplete.sh  test_mcp_debug.py  test_mcp_servers.py  test_mcp_tools.py
.claude-plugin/: marketplace.json  plugin.json
.sync-backups/20251120_015851/: data_server.py  providers_server.py  streaming_endpoint.py  unified_server.py  web_search_server.py
data_fetching/: CLAUDE.md  arxiv_client.py  factory.py  github_client.py  nasa_client.py  news_client.py  weather_client.py  wikipedia_client.py
dreamwalker_mcp/: __init__.py
dreamwalker_mcp/data_fetching/: __init__.py  archive_client.py  census_client.py  example_usage.py  openlibrary_client.py  semantic_scholar.py
dreamwalker_mcp/llm_providers/: anthropic_provider.py  cohere_provider.py  factory.py  groq_provider.py  openai_provider.py  xai_provider.py
dreamwalker_mcp/mcp/: =0.30.0  =24.0.0  ACTION_GUIDE.md  API.md  APP_INTEGRATION_GUIDE.md  ARCHITECTURE_REVIEW.md  CLAUDE_CODE_SETUP.md  CODEX_INTEGRATION.md  app.py  (+38 more)
llm_providers/: CLAUDE.md  __init__.py  anthropic_provider.py  claude_code_provider.py  cohere_provider.py  complexity_router.py  elevenlabs_provider.py  factory.py  gemini_provider.py  groq_provider.py  huggingface_provider.py  manus_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  perplexity_provider.py  xai_provider.py
mcp/: CLAUDE.md  __init__.py  app.py  cache_server.py  claude_code_config.json  config_server.py  cursor_mcp_config.json  data_server.py  discovery_resources.py  install.sh  install_cursor_mcp.sh  master_server.py  mcp_http_bridge.py  providers_server.py  requirements.txt  state_backup.json  stdio_server.py  tool_metadata.py  tool_registry.py  unified_server.py  view_costs.py  web_search_server.py
orchestration/: CLAUDE.md  base_orchestrator.py  beltalowda_orchestrator.py  dreamer_beltalowda_orchestrator.py  dreamer_swarm_orchestrator.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_data_fetching.py  test_orchestration.py  test_providers.py
tools/: arxiv_tool.py  cohere_tools.py  gemini_tools.py  github_tool.py  groq_tools.py  huggingface_tools.py  image_generation_tools.py  mistral_tools.py  nasa_tool.py  news_tool.py  openai_tools.py  openlibrary_tool.py  provider_registry.py  web_search_tool.py
utils/: CLAUDE.md  __init__.py  async_adapter.py  citation.py  data_validation.py  document_parsers.py  embeddings.py  execution.py  file_utils.py  format_converter.py  multi_search.py  progress.py  rate_limiter.py  retry_logic.py  text_processing.py  time_utils.py  tts.py  vision.py
(+74 files in other folders)
